--- a/README.Rmd
+++ b/README.Rmd
@@ -20,29 +20,22 @@ knitr::opts_chunk$set(
 
 
 
-## Example
+## THELIST
 
-This is a basic example which shows you how to solve a common problem:
+lutruwita's THELIST has an opendata store with local topographic spatial data. These are all listed in a [set of zip files](https://listdata.thelist.tas.gov.au/opendata/data).
 
-```{r example}
+This project scans the contents of every zip, and produces 
 
-print(Sys.time())
+- a list of all the zips
+- a list of the unique set of discovered file extensions
+- a table of all the underlying files
+- a cleaned up table of all the target files with a given file extension, and all the expanded GDB directories filtered out
 
-print(file.info("data-raw/list.sources.txt")[c("size", "mtime")])
-```
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
 
-```{r cars}
-summary(cars)
-```
+WIP, after a bit more checking we'll have links to these lists and some code. 
 
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this. You could also use GitHub Actions to re-render `README.Rmd` every time you push. An example workflow can be found here: <https://github.com/r-lib/actions/tree/v1/examples>.
 
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
+## Code of Conduct
+  
+Please note that the listmap.sources project is released with a [Contributor Code of Conduct](https://contributor-covenant.org/version/2/1/CODE_OF_CONDUCT.html). By contributing to this project, you agree to abide by its terms.
